--- a/pokemonTeamBuilder/build.gradle
+++ b/pokemonTeamBuilder/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "be.florien.teambuilder"
-        minSdkVersion 8
-        targetSdkVersion 19
+        minSdkVersion 15
+        targetSdkVersion 24
     }
 
     buildTypes {
@@ -19,7 +19,9 @@ android {
 }
 
 dependencies {
-    compile project(':joinOrm')
-    compile 'com.android.support:appcompat-v7:19.1.0'
+    compile project(':api')
+    compile project(':annotation')
+    compile project(':processor')
+    compile 'com.android.support:appcompat-v7:24.2.0'
     compile files('libs/sqliteassethelper-2.0.1.jar')
 }
