--- a/pokemonTeamBuilder/build.gradle
+++ b/pokemonTeamBuilder/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
@@ -8,6 +9,8 @@ android {
         applicationId "be.florien.teambuilder"
         minSdkVersion 15
         targetSdkVersion 24
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
@@ -19,9 +22,10 @@ android {
 }
 
 dependencies {
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    provided project(':annotation')
+    apt project(':processor')
     compile project(':api')
-    compile project(':annotation')
-    compile project(':processor')
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile files('libs/sqliteassethelper-2.0.1.jar')
 }
