--- a/pokemonTeamBuilder/build.gradle
+++ b/pokemonTeamBuilder/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.1"
+    buildToolsVersion "24.0.2"
 
     defaultConfig {
         applicationId "be.florien.teambuilder"
@@ -26,6 +26,8 @@ dependencies {
     provided project(':annotation')
     apt project(':processor')
     compile project(':api')
-    compile 'com.android.support:appcompat-v7:24.2.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:recyclerview-v7:24.2.1'
     compile files('libs/sqliteassethelper-2.0.1.jar')
+
 }
