--- a/pokemonTeamBuilder/build.gradle
+++ b/pokemonTeamBuilder/build.gradle
@@ -6,7 +6,7 @@ android {
     buildToolsVersion "24.0.2"
 
     defaultConfig {
-        applicationId "be.florien.teambuilder"
+        applicationId "be.florien.teambuilder.joinorm"
         minSdkVersion 15
         targetSdkVersion 24
         versionCode 1
